--- a/Assignment2.rmd
+++ b/Assignment2.rmd
@@ -325,7 +325,7 @@ cancer.lasso.dm <- cancer %>%
   data.matrix()
 ```
 
-We used cross-validation from the glmnet library which leaves out a 10th of the data every time. We produced the following plot (Fig. 5) of mean-squared error against log($\lambda$). We decided to use the 1-standard-error-$\lambda$ because this is likely to shrink some predictor variables to zero, performing variable selection. We prefer a simpler model. (See Appendix 4.2.3)
+We used cross-validation from `glmnet` which leaves out a 10th of the data every time. We produced the following plot (Fig. 5) of mean-squared error against log($\lambda$). We decided to use the 1-standard-error-$\lambda$ because this is likely to shrink more predictor variables to zero, selecting a simpler model. (See Appendix 4.2.3)
 
 ```{r echo=FALSE, fig.asp=0.5, fig.cap="Mean-squared error against log(lambda)", message=FALSE,warning=FALSE}
 set.seed((934))
